@@ -1,3 +1,12 @@
+2005-11-13  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	- Graphically enhanced the mosaic activity.
+
+	* boards/images/mosaic_bg.png:
+	* boards/images/mosaic_palette.png:
+	* src/boards/python/mosaic.py:
+	* src/gcompris/gcompris.c: (gcompris_set_fullscreen):
+
 2005-11-13  Yves Combe  <yves@ycombe.net>
 
 	finish code part for gtans board. Now buttons, gtans.xml.in  and look needs improvment.
